api conf
