# apiserver/model_configuration.go
@@ -15,8 +15,11 @@ type Configuration struct {
 	// Internal identifier for the configured API (created automatically).
 	Id *int64 `json:"id,omitempty"`
 
-	// There should be things like API address, access keys and so on.
-	ApiAccessChangeMe string `json:"apiAccessChangeMe,omitempty"`
+	// The URL to GP Joule API root
+	RootUrl string `json:"rootUrl,omitempty"`
+
+	// The API key for GP Joule API
+	ApiKey string `json:"apiKey,omitempty"`
 
 	// Flag to enable or disable fetching from this API
 	Enable *bool `json:"enable,omitempty"`
